# Scrapy_test

./: README.MD  pyproject.toml
EmalesParser/: all_enamels.csv  all_items.csv  first_16_enamels.csv  parser.xlsx  reformator.py  scrapy.cfg
EmalesParser/EmalesParser/: items.py  middlewares.py  pipelines.py  settings.py
EmalesParser/EmalesParser/spiders/: all_categories_spider.py  all_enamel_spider.py  first_16_enamels.py  parametrs_for_parses.py  params_for_spider.py
