[tool.poetry]
name = "scrapy-test"
version = "0.1.0"
description = ""
authors = ["BlackFoo44 <evgesha-kudriavzev@yandex.ru >"]
readme = "README.md"
packages = [{include = "scrapy_test"}]

[tool.poetry.dependencies]
python = "^3.11"
scrapy = "^2.8.0"
openpyxl = "^3.1.2"
isort = "^5.12.0"
black = "^23.3.0"
flake8 = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
